# podcast

./: .gitignore  Makefile  bow_reader.py  combine_ids.py  itunes_load_postgres.py  itunes_pairs.py  itunes_pairs.sh  itunes_url_ids.py  itunes_urls.sh  kde.py  merge_dists.py  mixture.py  nlp.py  podbean_warc.py  rss.py  rss_mixtures.py  rss_word_dists.py  soundcloud_decode.sh  soundcloud_get_links.sh  soundcloud_load_postgres.py  soundcloud_mat.py  soundcloud_pairs.sh  text_embedding.py
crawler/: crawler.py  frameset.html  http_.py  internet_archive.py  itunes.py  itunes_sign.html  jsshell.html  key.pem  mitm_script.py  podbean_warc.py  run.sh  run_itunes.sh  server.cert  server.key  server.pem  signed_req.js  soundcloud.py  spreaker_warc.py  test_sig.py
graph_extract/: Makefile  _ccomp.c  _ccomp.pyx  _segment.c  _segment.pyx  cluster.py  colorize.py  docvec.py  download_podbean_pages.py  dune  dune-project  fork_combine.ml  fork_combine.mli  graph_extract.ml  itunes.ml  map_tile.proto  map_tile_pb.ml  map_tile_pb.mli  map_tile_types.ml  map_tile_types.mli  map_words.py  mds.py  podbean.ml  quickshift.c  quickshift.pyx  segment.py  segment_descent.py  setup.py  soundcloud.ml  top1.py  utils.ml  warc  word_clusters.py  word_cost.ipynb  word_segments.py
graph_extract/lib/: dune  map_tile.proto  map_tile_pb.ml  map_tile_pb.mli  map_tile_types.ml  map_tile_types.mli  rss.ml  tokens.ml
rss_etract/: .merlin  dune  rss_extract.ml  tokenize.ml  tokenize.mli  warc.ml  warc.mli  warclex.mll  warcparse.mly
rss_extract/: .merlin  dune  dune-project  image_url_extract.ml  (+3 more)
(+29 files in other folders)
